# ttnara

./: .dockerignore  .eslintrc.json  .gitignore  .prettierrc.js  CLAUDE.md  Dockerfile  Dockerfile_dev  afterbuildCopy.mjs  common.mjs  docker-compose.yml  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  setup.mjs  tailwind.config.js  tsconfig.json  types.d.ts
.github/workflows/: chat-server-image.yml  loop-server-image.yml  make-docker-image-dev.yml  make-docker-image.yml  production-deploy.yml
chat_server/: Cargo.toml  Dockerfile  importSchema.js
chat_server/src/: admin.rs  auth.rs  cache.rs  cloudfront.rs  db.rs  filters.rs  main.rs  pipeline.rs  protocol.rs  purge.rs  registry.rs  spam.rs  state.rs  ws.rs
chat_server/src/helpers/tables/: chat_message.rs  chat_muted_user.rs  mod.rs  prelude.rs
docs/: chat-server-api.md
email_builder/: copyEmail.mjs  package-lock.json  package.json  tailwind.config.js
email_builder/build_production/: emailAuth.html
email_builder/emails/: emailAuth.html
loop_server/: .gitignore  Cargo.toml  Dockerfile  importSchema.js
loop_server/src/: main.rs
loop_server/src/helpers/tables/: common.rs  mod.rs  prelude.rs
manual/: index.html  plan.md
prisma/: schema.prisma
prisma/manual_sql/: 2026_04_27_chat_message_and_muted_user.sql  2026_05_26_guarantee_region_seed.sql  2026_06_17_rebuild_rank_snapshots.sql
public/: service-worker.js  site.webmanifest
public/assets/: seo.md
src/: middleware.js
src/app/: fonts.css  globals.css  icon22.tsx  layout.tsx  loading.tsx  manifest.ts  robots.ts  sitemap.ts.legacy
src/app/(main)/: layout.tsx
src/app/404/: page.tsx
src/app/sitemap/: route.ts
src/app/sitemap.xml/: route.ts
src/components/1_atoms/: AccountNavigationWidget.tsx  AlertP2PTrade.tsx  AuthGuard.tsx  BackgroundWrapper.tsx  Banners.tsx  BoardRankIcon.tsx  BrandProvider.tsx  ButtonBadge.tsx  CascadeDeleteDialog.tsx  CircleLight.tsx  CkeditorViewer.tsx  CollapseText.tsx  ConfirmDialog.tsx  ConfirmTextModal.tsx  ControllAdminMode.tsx  DashedCard.tsx  DisplayRank.tsx  EasyModal.tsx  EasyTooltip.tsx  ElipsisText.tsx  ErrorMessage.tsx  ForgotNavigationWidget.tsx  Form.tsx  FormDialog.tsx  FormText.tsx  FreeTrade.tsx  GoAdminPageButton.tsx  GoogleOauth.tsx  HTMLViewer.tsx  InputStyleWrapper.tsx  InputSuffix.tsx  KYCAuthor.tsx  KeyboardKey.tsx  LenBadge.tsx  Loader.tsx  Logo.tsx  LogoutButton.tsx  MainFooterWidget.tsx  MenubarButton.tsx  MessageMenu.tsx  (+28 more)
src/components/2_molecules/: AlarmItem.tsx  CalculatorWidget.tsx  ChatBanner.tsx  ChatInput.tsx  ChatMessage.tsx  ChatNoticeCarousel.tsx  ChatSystemMessage.tsx  CountdownOtp.tsx  DateMonthPicker.tsx  DateRangePicker.tsx  DevLogToggle.tsx  EmailValidator.tsx  FileUploader.tsx  (+7 more)
src/helpers/: base64.ts  basic.ts  boardActivity.ts  chatStore.ts  common.ts  config.ts  css.ts  date.ts  debounce.ts  defaultValue.ts  emailFormat.ts  emailTemplateDefaults.ts  emailTemplateVars.ts  get.ts  inputUtils.ts  makeComponent.tsx  optimistic.ts  pointSystem.ts  query.ts  state.ts  tetherRegion.ts  toastData.ts  types.ts  uploadUtil.ts  validate.ts
src/lib/: boardAccess.ts  eventEmitter.ts
(+741 files in other folders)
