[package]
name = "chat_server"
version = "0.1.6"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.16"
axum = { version = "0.7.9", features = ["ws", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["clock", "serde"] }

sea-orm = { version = "1.1.16", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }

dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

dashmap = "6.1.0"
uuid = { version = "1.11.0", features = ["v4", "v7", "serde"] }
jsonwebtoken = "9.3.0"
aho-corasick = "1.1.3"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
subtle = "2.6.1"

# CloudFront signed-URL generation for chat rank-badge images (RSA-SHA1).
rsa = { version = "0.9", features = ["pem"] }
sha1 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
