[package]
name = "loop_server"
version = "0.1.2"
edition = "2021"

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
atomic_http = { version = "0.8.0", features = ["response_file", "env"] }
tokio = { version = "1.47.1", features = ["full"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
async-trait = "0.1.89"
urlencoding = "2.1.3"
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
    "http2",
    "gzip",
    "charset",
], default-features = false }
teloxide-core = "0.13.0"
sea-orm = { version = "1.1.16", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
openssl = { version = "0.10.73", features = ["vendored"] }
